Commit Scanner DNI

--- a/public_html/templates/ingreso.html
+++ b/public_html/templates/ingreso.html
@@ -3,5 +3,8 @@
     <button class="button button-dark button-block icon-left ion-qr-scanner" ng-click="abrirEscaner()">Abrir escaner</button>
     <div class="spacer" style="width: 300px; height: 5px;"></div>
     <button class="button button-light button-block icon-left ion-android-download" ng-click="descargarArchivo()">Descargar archivo</button>
+    
+    <a id="lnkDescarga" style="visibility: hidden"></a>
+    
   </ion-content>
 </ion-view>
