Commit Scanner DNI

--- a/public_html/templates/ingreso.html
+++ b/public_html/templates/ingreso.html
@@ -2,7 +2,7 @@
   <ion-content padding="true" style="background: url(img/Y1D1ggZyQHuBWdybC1km_Mujer-3.jpg) no-repeat center;background-size:cover;" class="has-header">
     <button class="button button-dark button-block icon-left ion-qr-scanner" ng-click="abrirEscaner()">Abrir escaner</button>
     <div class="spacer" style="width: 300px; height: 5px;"></div>
-    <button class="button button-light button-block icon-left ion-android-download" ng-click="descargarArchivo()">Descargar archivo</button>
+    <button class="button button-light button-block icon-left ion-android-download">Ver archivo</button>
     
     <a id="lnkDescarga" style="visibility: hidden"></a>
     
