--- a/public_html/templates/menu.html
+++ b/public_html/templates/menu.html
@@ -13,7 +13,7 @@
       <div class="title">Menu</div>
     </ion-header-bar>
     <ion-content padding="false" class="side-menu-left has-header ">
-      <ion-list id="menu-list1" ng-controller="ingresoCtrl">
+      <ion-list id="menu-list1" ng-controller="escanerCtrl">
         <ion-item id="menu-list-item1" ui-sref="menu.ingreso()" menu-close="">Ingreso</ion-item>
         <ion-item id="menu-list-item2" ng-click="abrirEscaner()" menu-close="">Escanear DNI</ion-item>
         <ion-item id="menu-list-item3" ng-click="descargarArchivo()" menu-close="">Descargar archivo</ion-item>
