Commit para ftp Scanner DNI

--- a/public_html/templates/listado.html
+++ b/public_html/templates/listado.html
@@ -1,16 +1,15 @@
 <ion-view title="Listado de DNI's" id="page2">
     <ion-content padding="true" class="has-header">
         <ion-list>            
-            <ion-item class="item-icon-right" 
-                      ng-repeat="persona in getPersonas()"
-                      ng-class="persona.SEXO === 'F'?'royal':'balanced'">
+            <ion-item class="item-icon-right {{(persona.SEXO === 'F')?'royal':'balanced'}}" 
+                      ng-repeat="persona in getPersonas()">
                 <h2>DNI: {{persona.DNI}}</h2>
                 <p>Apellido: {{persona.APELLIDO}}</p>
                 <p>Nombre: {{persona.NOMBRE}}</p>
                 <p>Sexo: {{persona.SEXO}}</p>
                 <i class="icon ion-android-person icon-accessory"></i>
             </ion-item>
-            <ion-item ng-hide="var.vecPersonas.length">
+            <ion-item ng-hide="getPersonas().length">
                 <h2>Listado vacio</h2>
                 <p>No posee escaneos cargados</p>
             </ion-item>
