--- a/public_html/templates/listado.html
+++ b/public_html/templates/listado.html
@@ -1,8 +1,9 @@
 <ion-view title="Listado de DNI's" id="page2">
     <ion-content padding="true" class="has-header">
         <ion-list>            
-            <ion-item class="item-icon-right {{(persona.SEXO === 'F')?'royal':'balanced'}}" 
-                      ng-repeat="persona in getPersonas()">
+            <ion-item class="item-icon-right" 
+                      ng-repeat="persona in getPersonas()"
+                      ng-class="(persona.SEXO === 'F')?'royal':'balanced'">
                 <h2>DNI: {{persona.DNI}}</h2>
                 <p>Apellido: {{persona.APELLIDO}}</p>
                 <p>Nombre: {{persona.NOMBRE}}</p>
