--- a/public_html/templates/listado.html
+++ b/public_html/templates/listado.html
@@ -1,14 +1,25 @@
 <ion-view title="Listado de DNI's" id="page2">
+    <ion-nav-buttons side="right" class="has-header">
+        <button class="button button-positive icon icon ion-android-list">
+            <ion-icon name="notifications">
+                <ion-badge class="badge badge-assertive" style="left: -10px;">{{getPersonas().length}}</ion-badge>
+            </ion-icon>
+        </button>
+    </ion-nav-buttons>
     <ion-content padding="true" class="has-header">
         <ion-list>            
             <ion-item class="item-icon-right" 
                       ng-repeat="persona in getPersonas()"
-                      ng-class="(persona.SEXO === 'F')?'royal':'balanced'">
+                      ng-class="'royal': persona.SEXO === 'F' , 'balanced': persona.SEXO === 'M'">
                 <h2>DNI: {{persona.DNI}}</h2>
                 <p>Apellido: {{persona.APELLIDO}}</p>
                 <p>Nombre: {{persona.NOMBRE}}</p>
                 <p>Sexo: {{persona.SEXO}}</p>
                 <i class="icon ion-android-person icon-accessory"></i>
+                <ion-option-button class="button-assertive"
+                                   ng-click="eliminarRegistro($index)">
+                    <i class="icon ion-trash-a"></i>
+                </ion-option-button>
             </ion-item>
             <ion-item ng-hide="getPersonas().length">
                 <h2>Listado vacio</h2>
