Commit para ftp Scanner DNI

--- a/public_html/templates/ingreso.html
+++ b/public_html/templates/ingreso.html
@@ -9,7 +9,7 @@
     <ion-content padding="true" style="background: url(img/Y1D1ggZyQHuBWdybC1km_Mujer-3.jpg) no-repeat center;background-size:cover;" class="has-header">
         <button class="button button-dark button-block icon-left ion-qr-scanner" ng-click="abrirEscaner()">Escaner</button>
         <div class="spacer" style="width: 300px; height: 5px;"></div>
-        <button class="button button-balanced button-block icon-left ion-android-list" ui-sref="menu.listado()">Listado</button>
+        <button class="button button-balanced button-block icon-left ion-android-list" ng-click="gotoListado()">Listado</button>
         <div class="spacer" style="width: 300px; height: 5px;"></div>
         <button class="button button-light button-block icon-left ion-android-upload" ng-click="subirArchivo()">Subir archivo</button>
 
