Commit para ftp Scanner DNI

--- a/public_html/templates/ingreso.html
+++ b/public_html/templates/ingreso.html
@@ -1,6 +1,6 @@
 <ion-view title="Ingreso" id="page1">
     <ion-nav-buttons side="right" class="has-header">
-        <button class="button button-positive icon icon ion-android-list">
+        <button class="button button-positive icon icon ion-android-list" ng-click="gotoListado()">
             <ion-icon name="notifications">
                 <ion-badge class="badge badge-assertive" style="left: -10px;">{{getPersonas().length}}</ion-badge>
             </ion-icon>
