--- a/public_html/templates/ingreso.html
+++ b/public_html/templates/ingreso.html
@@ -12,6 +12,8 @@
         <button class="button button-balanced button-block icon-left ion-android-list" ng-click="gotoListado()">Listado</button>
         <div class="spacer" style="width: 300px; height: 5px;"></div>
         <button class="button button-light button-block icon-left ion-android-upload" ng-click="guardarArchivo()">Subir archivo</button>
+        <div class="spacer" style="width: 300px; height: 5px;"></div>
+        <button class="button button-light button-block icon-left ion-android-cloud-done" ng-click="abrirUrlRemota()">Abrir archivo remoto</button>
 
     </ion-content>
 </ion-view>
