--- a/public_html/templates/menu.html
+++ b/public_html/templates/menu.html
@@ -18,6 +18,7 @@
         <ion-item id="menu-list-item2" ng-click="abrirEscaner()" menu-close="">Escanear</ion-item>
         <ion-item id="menu-list-item3" ng-click="gotoListado()" menu-close="">Listado</ion-item>
         <ion-item id="menu-list-item4" ng-click="subirArchivo()" menu-close="">Subir archivo</ion-item>
+        <ion-item id="menu-list-item4" ng-click="abrirUrlRemota()" menu-close="">Abrir archivo</ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
