--- a/public_html/templates/ingreso.html
+++ b/public_html/templates/ingreso.html
@@ -1,4 +1,4 @@
-<ion-view title="Ingreso" id="page1">
+<ion-view title="Ingreso {{getNombreLugar()}}" id="page1">
     <ion-nav-buttons side="right" class="has-header">
         <button class="button button-positive icon icon ion-android-list" ng-click="gotoListado()">
             <ion-icon name="notifications">
@@ -7,13 +7,11 @@
         </button>
     </ion-nav-buttons>
     <ion-content padding="true" style="background: url(img/Y1D1ggZyQHuBWdybC1km_Mujer-3.jpg) no-repeat center;background-size:cover;" class="has-header">
-        <button class="button button-dark button-block icon-left ion-qr-scanner" ng-click="abrirEscaner()">Escaner</button>
+        <button class="button button-balanced button-block icon-left ion-qr-scanner" ng-click="abrirEscaner('ENTRADA')">Escanear ingreso</button>
         <div class="spacer" style="width: 300px; height: 5px;"></div>
-        <button class="button button-balanced button-block icon-left ion-android-list" ng-click="gotoListado()">Listado</button>
+        <button class="button button-assertive button-block icon-left ion-android-exit" ng-click="abrirEscaner('SALIDA')">Escanear salida</button>
         <div class="spacer" style="width: 300px; height: 5px;"></div>
-        <button class="button button-light button-block icon-left ion-android-upload" ng-click="guardarArchivo()">Subir archivo</button>
-        <div class="spacer" style="width: 300px; height: 5px;"></div>
-        <button class="button button-light button-block icon-left ion-android-cloud-done" ng-click="abrirUrlRemota()">Abrir archivo remoto</button>
+        <button class="button button-light button-block icon-left ion-arrow-swap" ng-click="guardarArchivo()">Sincronizar</button>
 
     </ion-content>
 </ion-view>
