--- a/public_html/templates/listado.html
+++ b/public_html/templates/listado.html
@@ -1,5 +1,7 @@
-<ion-view title="Listado de DNI's del {{var.fecha}}" id="page2">
+<ion-view title="Listado del {{var.fecha}}" id="page2">
     <ion-nav-buttons side="right" class="has-header">
+        <button class="button button-balanced icon icon ion-android-calendar" style="margin-right: 10px" ng-click="showDatePicker()">
+        </button>
         <button class="button button-positive icon icon ion-trash-a" ng-click="eliminarRegistro(-1, -1)">
             <ion-icon name="notifications">
                 <ion-badge class="badge badge-assertive" style="left: -10px;">{{getPersonas().length}}</ion-badge>
