--- a/public_html/templates/ingreso.html
+++ b/public_html/templates/ingreso.html
@@ -1,4 +1,4 @@
-<ion-view title="Ingreso {{getNombreLugar()}}" id="page1">
+<ion-view title="{{getNombreLugar()}}" id="page1">
     <ion-nav-buttons side="right" class="has-header">
         <button class="button button-positive icon icon ion-android-list" ng-click="gotoListado()">
             <ion-icon name="notifications">
