--- a/public_html/templates/listado.html
+++ b/public_html/templates/listado.html
@@ -1,4 +1,4 @@
-<ion-view title="Listado del {{var.fecha}}" id="page2">
+<ion-view title="Lista: {{var.fecha}}" id="page2">
     <ion-nav-buttons side="right" class="has-header">
         <button class="button button-balanced icon icon ion-android-calendar" style="margin-right: 10px" ng-click="mostrarDatePicker($event)">
         </button>
