--- a/public_html/templates/listado.html
+++ b/public_html/templates/listado.html
@@ -21,7 +21,7 @@
                 <p>Hora: {{persona.HORA}}</p>
                 <i class="icon ion-android-person icon-accessory"></i>
                 <ion-option-button class="button-assertive"
-                                   ng-click="eliminarRegistro($index, persona.DNI)">
+                                   ng-click="eliminarRegistro($index, persona)">
                     <i class="icon ion-trash-a"></i>
                 </ion-option-button>
             </ion-item>
