--- a/public_html/templates/listado.html
+++ b/public_html/templates/listado.html
@@ -17,8 +17,8 @@
                 <p>Apellido: {{persona.APELLIDO}}</p>
                 <p>Nombre: {{persona.NOMBRE}}</p>
                 <p>Sexo: {{persona.SEXO}}</p>
-                <p>E/S: {{persona.TIPO}}</p>
-                <p>Hora: {{persona.HORA}}</p>
+                <p>E/S: <b>{{persona.TIPO}}</b></p>
+                <p>Hora: <b>{{persona.HORA}}</b></p>
                 <i class="icon ion-android-person icon-accessory"></i>
                 <ion-option-button class="button-assertive"
                                    ng-click="eliminarRegistro($index, persona)">
