--- a/public_html/templates/ingreso.html
+++ b/public_html/templates/ingreso.html
@@ -6,7 +6,7 @@
             </ion-icon>
         </button>
     </ion-nav-buttons>
-    <ion-content padding="true" style="background: url(img/Y1D1ggZyQHuBWdybC1km_Mujer-3.jpg) no-repeat center;background-size:cover;" class="has-header">
+    <ion-content padding="true" style="background: url(img/DcBbd0v9TwKwBhzCPC9f_splash-mdpi.png) no-repeat center;background-size:cover;" class="has-header">
         <button class="button button-balanced button-block icon-left ion-qr-scanner" ng-click="abrirEscaner('ENTRADA')">Escanear ingreso</button>
         <div class="spacer" style="width: 300px; height: 5px;"></div>
         <button class="button button-assertive button-block icon-left ion-android-exit" ng-click="abrirEscaner('SALIDA')">Escanear salida</button>
