--- a/public_html/templates/listado.html
+++ b/public_html/templates/listado.html
@@ -2,6 +2,8 @@
     <ion-nav-buttons side="right" class="has-header">
         <button class="button button-balanced icon icon ion-android-calendar" style="margin-right: 10px" ng-click="mostrarDatePicker($event)">
         </button>
+        <button class="button button-light icon icon ion-arrow-swap" ng-click="guardarArchivo()">
+        </button>
         <!--<button class="button button-positive icon icon ion-trash-a" ng-click="eliminarRegistro(-1, -1)">
             <ion-icon name="notifications">
                 <ion-badge class="badge badge-assertive" style="left: -10px;">{{getPersonas().length}}</ion-badge>
