--- a/public_html/templates/ingreso.html
+++ b/public_html/templates/ingreso.html
@@ -11,7 +11,7 @@
         <div class="spacer" style="width: 300px; height: 5px;"></div>
         <button class="button button-assertive button-block icon-left ion-android-exit" ng-click="abrirEscaner('SALIDA')">Escanear salida</button>
         <div class="spacer" style="width: 300px; height: 5px;"></div>
-        <button class="button button-light button-block icon-left ion-arrow-swap" ng-click="guardarArchivo()">Sincronizar</button>
+        <button class="button button-light button-block icon-left ion-arrow-swap" ng-click="guardarArchivo(true)">Sincronizar</button>
 
     </ion-content>
 </ion-view>
