--- a/public_html/templates/menu.html
+++ b/public_html/templates/menu.html
@@ -18,7 +18,7 @@
         <ion-item id="menu-list-item2" ng-click="abrirEscaner('ENTRADA')" menu-close="">Escanear ingreso</ion-item>
         <ion-item id="menu-list-item2" ng-click="abrirEscaner('SALIDA')" menu-close="">Escanear salida</ion-item>
         <ion-item id="menu-list-item3" ng-click="gotoListado()" menu-close="">Lista</ion-item>
-        <ion-item id="menu-list-item4" ng-click="subirArchivo()" menu-close="">Sincronizar</ion-item>
+        <ion-item id="menu-list-item4" ng-click="guardarArchivo(true)" menu-close="">Sincronizar</ion-item>
         <ion-item id="menu-list-item5" ng-click="abrirUrlRemota()" menu-close="">Abrir datos remotos</ion-item>
         <ion-item id="menu-list-item6" ng-click="verUrlRemota()" menu-close="">¿Donde est&aacute;n mis datos?</ion-item>
       </ion-list>
